<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alert_dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_alert_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/alert_dialog_title"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/txt_alert"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorAccent" />


        <TextView
            android:id="@+id/tv_alert_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@color/white"
            android:gravity="center"
            android:padding="25dp"
            android:text="@string/alert_dialog_message"
            android:textColor="@color/black_30"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/btn_alert_cancel"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_gravity="bottom"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/login_button_selector"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/alert_dialog_btn_no"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_alert_ok"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/signup_button_selector"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/alert_dialog_btn_yes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>