<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView

        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/theme_color"
        android:gravity="center"
        android:text="@string/activation"
        android:textSize="@dimen/_16sdp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/code_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center"
        android:text="@string/your_phone"
        android:textSize="@dimen/_16sdp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/color_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:textSize="@dimen/_14sdp"
        android:text="@string/activation_string"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/color_text" />

    <EditText
        android:id="@+id/activation_code"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_30sdp"
        android:focusable="true"
        android:maxLength="6"
        android:focusableInTouchMode="true"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:inputType="number"
        android:maxLines="1"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/color_text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@color/background"

        >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text=""
            android:textSize="@dimen/_12sdp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/color_text" />

        <TextView
            android:id="@+id/resendcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:text="Resend Code"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/header_bg"
            android:textSize="@dimen/_18sdp"
            android:visibility="gone" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/signup_button_selector"
        android:gravity="center"
        android:paddingLeft="@dimen/_30sdp"
        android:paddingRight="@dimen/_30sdp"
        android:text="@string/string_continue"
        android:textSize="@dimen/_13sdp"
        android:textColor="@color/color_white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/background"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@color/background">

            <View
                android:id="@+id/centerview"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"

                />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>