<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/rounded_corners_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:text="Profile photo"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/camera_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:background="@color/transparent">

                <ImageView
                    android:id="@+id/camera_iv"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_camera" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:paddingTop="@dimen/_5sdp"
                android:text="@string/chat_camera"
                android:textColor="#212121"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/galley_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:background="@color/transparent">

                <ImageView
                    android:id="@+id/gallery_iv"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_gallery" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:paddingTop="@dimen/_5sdp"
                android:text="@string/chat_gallery"
                android:textColor="#212121"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/remove_profile_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:background="@color/transparent">

                <ImageView
                    android:id="@+id/remove_iv"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_profile_delete" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:paddingTop="@dimen/_5sdp"
                android:text="@string/remove"
                android:textColor="#212121"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black_30" />

    <TextView
        android:id="@+id/dialog_cancel_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:gravity="center"
        android:padding="@dimen/_8sdp"
        android:text="Cancel"
        android:textColor="@color/black_30"
        android:textSize="@dimen/_14sdp" />

</LinearLayout>